# ops_pulse

./: .editorconfig  .gitignore  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 386b2c8fe501_init_multi_tenant_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  health.py  tasks.py
backend/app/core/: deps.py  errors.py  middleware.py  rate_limit.py  security.py  settings.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  organization.py  task.py  user.py
backend/app/schemas/: auth.py  common.py  dashboard.py  health.py  task.py
backend/app/services/: auth.py  demo_directory.py  health.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_migrations.py  test_pagination_filters.py  test_rate_limit.py  test_tasks_dashboard.py
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/api/: auth.ts  dashboard.ts  health.ts  http.ts  tasks.ts
frontend/src/app/: providers.tsx  router.tsx  styles.css
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/login/: LoginPage.tsx
frontend/src/pages/profile/: ProfilePage.tsx
frontend/src/pages/tasks/: TasksPage.tsx
frontend/src/pages/users/: UsersPage.tsx
frontend/src/shared/config/: env.ts
(+7 files in other folders)
